fix: Atualizar CRM da Dra. Júlia Tenório e Dra. Victoria Medeiros

--- a/src/components/CorpoClinico/index.astro
+++ b/src/components/CorpoClinico/index.astro
@@ -40,7 +40,7 @@ const doctors = [
   { img: jandira.src, title: "Fonoaudióloga", text: "Dra. Jandira Maia", conselho: "CRFA: 4-13960" },
   { img: jose.src, title: "Mastologista", text: "Dr. José Venâncio", objectTop: true, conselho: "CRM: 7097-AL" },
   { img: juarez.src, title: "Fisioterapeuta", text: "Dr. Juaréz Alexandre", conselho: "CREFITO: 283695-F" },
-  { img: julia.src, title: "Ginecologista", text: "Dra. Júlia Tenório", conselho: "FALTA" },
+  { img: julia.src, title: "Ginecologista", text: "Dra. Júlia Tenório", conselho: "CRM 8845-AL" },
   { img: juliana.src, title: "Fisioterapeuta", text: "Dra. Juliana Gomes", conselho: "CREFITO: 351313-F" },
   { img: lilian.src, title: "Alergista", text: "Dra. Lilian Maria", conselho: "CRM: 6875-AL" },
   { img: ricardo_neuro.src, title: "Neurologista", text: "Dr. Ricardo Tenório", conselho: "CRM: 2580-AL" },
@@ -48,7 +48,7 @@ const doctors = [
   { img: suzane.src, title:"Ginecologista", text:"Dra. Suzana Cabral", objectTop: true, conselho: "CRM: 5168-AL"},
   { img: thaysa.src, title: "Pneumologista", text: "Dra. Thaysa Alburquerque", objectTop: true, conselho: "CRM: 6867-AL" },
   { img: ubirajara.src, title: "Ultrassonografista", text: "Dr. Ubirajara Matos", objectTop: true, conselho: "CRM: 7362-AL" },
-  { img: victoria.src, title: "Nutricionista", text: "Dra. Victoria Medeiros", objectTop: true, conselho: "FALTA" },
+  { img: victoria.src, title: "Nutricionista", text: "Dra. Victoria Medeiros", objectTop: true, conselho: "CRN6: 23393-AL" },
   { img: daise.src, title: "Otorrinolaringologista", text: "Dra. Daise Nicacio", objectTop: true, conselho: "CRM: 6167-AL" },
   { img: larissa.src, title: "Otorrinolaringologista", text: "Dra. Larissa Tenório", objectTop: true, conselho: "CRM: 7462-AL" },
 ]
