--- a/src/components/QuemSomos/index.astro
+++ b/src/components/QuemSomos/index.astro
@@ -7,7 +7,7 @@ import Corredor2 from '../../assets/ImgsClinica/corredor2.svg';
 import Sala from '../../assets/ImgsClinica/sala.svg';
 import Fachada from '../../assets/ImgsClinica/fachada.svg';
 import Recepcao1 from '../../assets/ImgsClinica/recepcao1.svg';
-import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
+import Recepcao2 from '../../assets/ImgsClinica/recepcao2.jpg';
 ---
 
 <Section1 />
@@ -81,7 +81,7 @@ import Recepcao2 from '../../assets/ImgsClinica/recepcao2.svg';
         </div>
     </div>
 
-    <div class="flex flex-col lg:flex-row items-center justify-center gap-3 px-3 w-full mt-5 sm:mt-6 md:mt-7 lg:mt-6 sm:mt-8">
+    <div class="flex flex-col lg:flex-row items-center justify-center gap-3 px-3 w-full mt-5 sm:mt-6 md:mt-7 lg:mt-6">
     
         <div class="flex flex-row lg:flex-col w-full lg:w-1/2 lg:h-full items-center justify-center gap-4 lg:gap-3 px-3">
             <img src={Corredor1.src} alt="Imagem do Interior da Clínica"   class="rounded-xl w-1/2 lg:w-full h-full lg:h-1/2 object-cover" />
