fix: Correções logo Sallute

--- a/src/components/CorpoClinico/index.astro
+++ b/src/components/CorpoClinico/index.astro
@@ -54,7 +54,7 @@ const doctors = [
 ]
 ---
 
-<section class="flex flex-col items-center justify-center py-10 mb-10 bg-[#F4F7FF]">
+<section class="flex flex-col items-center justify-center py-10 mb-10 bg-[#FFFFFF]">
     
     <DescriptionSection 
         img={IconePlus.src}
