--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -7,7 +7,7 @@ import Icontelefone from "../../assets/socialbuttons/telefone.svg";
 import Iconemail from "../../assets/socialbuttons/email.svg";
 import Iconrocket from "../../assets/logo-rocket.svg";
 import Frase2 from "../../assets/frase2.svg";
-import LogoSalluteBranco from "../../assets/salluteLogoBranco.svg";
+import salutelogo from "../../assets/logoSallute.png";
 ---
 
 <style>
@@ -20,11 +20,11 @@ import LogoSalluteBranco from "../../assets/salluteLogoBranco.svg";
       <div class="flex flex-col md:w-1/3">
         <div class="text-center md:text-left mb-4 md:mb-1">
           <Image
-            src={LogoSalluteBranco}
+            src={salutelogo}
             alt="Logo Sallute"
             class="mx-auto md:mx-0"
-            width={200}
-            height={80}
+            width={250}
+            height={125}
           />
           <Image
             src={Frase2}
