--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -1,18 +1,18 @@
 ---
 import { Image } from "astro:assets";
-import salutelogo from "../../assets/salluteLogoBranco.svg";
+import salutelogo from "../../assets/logoSallute.png";
 import relogioicon from "../../assets/relogioicon.svg";
 ---
 
-<header class="bg-[#3ABDAD] text-white py-3 sticky top-0 z-50" id="main-header">
+<header class="bg-[#3ABDAD] text-white py-1 sticky top-0 z-50" id="main-header">
   <nav class="flex items-center justify-between max-w-7xl mx-auto">
     <div class="flex-shrink-0">
       <a href="/">
         <Image
           src={salutelogo}
           alt="Sallute Logo"
-          width={120}
-          height={60}
+          width={250}
+          height={125}
           class="object-contain"/>
         </a>
     </div>
