fix: Correções slider Section1

--- a/src/components/Section1/index.astro
+++ b/src/components/Section1/index.astro
@@ -8,7 +8,7 @@ import "keen-slider/keen-slider.min.css";
 ---
 
 <section id="Home" class="relative w-full overflow-hidden">
-  <div id="my-keen-slider" class="relative h-[300px] sm:h-[400px] md:h-[500px] lg:h-[900px]">
+  <div id="my-keen-slider" class="relative h-[300px] sm:h-[400px] md:h-[500px] lg:h-[600px] xl:h-[700px]">
     <div class="fader__slide absolute top-0 left-0 w-full h-full opacity-0 transition-opacity duration-300 ease-in-out">
         <Image
           src={slideImage}
