--- a/src/components/Servicos/index.astro
+++ b/src/components/Servicos/index.astro
@@ -176,102 +176,22 @@ const laser = [
     <div class="flex-1 min-w-0">
       
       <h2 id="exames" class="scroll-mt-30 md:scroll-mt-32 text-xl sm:text-2xl md:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-4 mb-3 text-left">
-        Exames em Geral</h2>
-
-      <div class="space-y-6 lg:space-y-10 mt-10">
-        <div class="flex flex-col md:items-start md:gap-1">
-          <h3 class="text-xs sm:text-xl md:text-1xl lg:text-3xl font-semibold text-[#031E2D]">
-            Espirometria:
-          </h3>
-          <p class="text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl">
-            É um teste de função pulmonar que mede a quantidade de ar que uma pessoa pode inalar e exalar, assim como a velocidade com que o ar pode ser expelido dos pulmões. É um exame comum usado para diagnosticar e monitorar doenças pulmonares, como asma, doença pulmonar obstrutiva crônica (DPOC), fibrose pulmonar e outras condições respiratórias.
-          </p>
-        </div>
-    
-        <div class="flex flex-col md:items-start md:gap-1">
-          <h3 class="text-xs sm:text-xl md:text-1xl lg:text-3xl font-semibold text-[#031E2D]">
-            Bioimpedância:
-          </h3>
-          <p class="text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl">
-            Exame que analisa a composição corporal, como porcentagem de gordura, músculo e água.
-          </p>
-        </div>
-
-        <div class="flex flex-col md:items-start md:gap-1">
-          <h3 class="text-xs sm:text-xl md:text-1xl lg:text-3xl font-semibold text-[#031E2D]">
-            Teste da linguinha:
-          </h3>
-          <p class="text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl">
-            Avaliação simples que detecta alterações no frênulo lingual (língua presa) em recém-nascidos.
-          </p>
-        </div>
-
-        <div class="flex flex-col md:items-start md:gap-1">
-          <h3 class="text-xs sm:text-xl md:text-1xl lg:text-3xl font-semibold text-[#031E2D]">
-            Teste de contato (Patch Test):
-          </h3>
-          <p class="text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl">
-            Exame que identifica alergias de pele a substâncias específicas através da aplicação de adesivos nas costas.
-          </p>
-        </div>
-
-        <div class="flex flex-col md:items-start md:gap-1">
-          <h3 class="text-xs sm:text-xl md:text-1xl lg:text-3xl font-semibold text-[#031E2D]">
-            Prick Teste:
-          </h3>
-          <p class="text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl">
-            Exame que detecta alergias imediatas, como a alimentos e poeira, através de pequenas aplicações na pele.
-          </p>
-        </div>
-
-        <div class="flex flex-col md:items-start md:gap-1">
-          <h3 class="text-xs sm:text-xl md:text-1xl lg:text-3xl font-semibold text-[#031E2D]">
-            Biópsia de pele:
-          </h3>
-          <p class="text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl">
-            Procedimento que retira uma pequena amostra da pele para análise e diagnóstico de doenças dermatológicas.
-          </p>
-        </div>
-
-        <div class="flex flex-col md:items-start md:gap-1">
-          <h3 class="text-xs sm:text-xl md:text-1xl lg:text-3xl font-semibold text-[#031E2D]">
-            Videonasofibroscopia flexível:
-          </h3>
-          <p class="text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl">
-            Exame que avalia as estruturas internas do nariz e da garganta com uma câmera flexível,auxiliando no diagnóstico de obstruções e inflamações.
-          </p>
-        </div>
-
-        <div class="flex flex-col md:items-start md:gap-1">
-          <h3 class="text-xs sm:text-xl md:text-1xl lg:text-3xl font-semibold text-[#031E2D]">
-            Videolaringoscopia flexível:
-          </h3>
-          <p class="text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl">
-            Exame que visualiza diretamente a laringe (cordas vocais e região próxima) com uma câmera flexível, indicado para investigar rouquidão, dor ou dificuldade para falar.
-          </p>
-        </div>
-
-        <div class="flex flex-col md:items-start md:gap-1">
-          <h3 class="text-xs sm:text-xl md:text-1xl lg:text-3xl font-semibold text-[#031E2D]">
-            Videonasolaringoscopia:
-          </h3>
-          <p class="text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl">
-            Exame que combina a avaliação do nariz, garganta e laringe, usando uma câmera flexível para diagnóstico completo de alterações nessas regiões.
-          </p>
-        </div>
-
-        <div class="flex flex-col md:items-start md:gap-1">
-          <h3 class="text-xs sm:text-xl md:text-1xl lg:text-3xl font-semibold text-[#031E2D]">
-            Vacinas:
-          </h3>
-          
-          <ul class="flex flex-col list-disc pl-4 text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl">
-            <li>VAC. ALÉRGENO ESPECIFICA;</li>
-            <li>VAC. PARA INSETOS;</li>
-            <li>VAC. INJETAVEL P/ CANDIDIASE.</li>
-          </ul>
-        </div>
-
+        EXAMES EM GERAL
+      </h2>
+      <ul class="list-disc pl-4 space-y-1 text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl mb-3">
+        <li>ESPIROMETRIA;</li>
+        <li>BIOIMPEDÂNCIA;</li>
+        <li>TESTE DA LINGUINHA;</li>
+        <li>TESTE DE CONTATO (PATCH TEST);</li>
+        <li>PRICK TESTE;</li>
+        <li>BIÓPSIA DE PELE;</li>
+        <li>VIDEONASOFIBROSCOPIA FLEXÍVEL;</li>
+        <li>VIDEOLARINGOSCOPIA FLEXÍVEL;</li>
+        <li>VIDEONASOLARINGOSCOPIA;</li>
+        <li>VAC. ALÉRGENO ESPECIFICA;</li>
+        <li>VAC. PARA INSETOS;</li>
+        <li>VAC. INJETÁVEL P/ CANDIDÍASE.</li>
+      </ul>
     </div>
   </div>    
 </section>
