fix: Correção da barra do Header do menu mobile

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -6,7 +6,7 @@ import relogioicon from "../../assets/relogioicon.svg";
 
 <header class="bg-[#3ABDAD] text-white py-1 sticky top-0 z-50" id="main-header">
   <nav class="flex items-center justify-between max-w-7xl mx-auto">
-    <div class="flex-shrink-0">
+    <div class="flex-shrink-0 mr-4 md:mr-6 lg:mr-8">
       <a href="/">
         <Image
           src={salutelogo}
@@ -23,7 +23,7 @@ import relogioicon from "../../assets/relogioicon.svg";
       <span class="w-6 h-0.5 bg-white transition-all duration-200"></span>
     </button>
 
-    <ul class="hidden md:flex space-x-8 font-medium">
+    <ul class="hidden md:flex space-x-4 md:space-x-6 lg:space-x-8 font-medium">
       <li><a href="/#Home" class="hover:text-teal-900 transition-colors">Início</a></li>
       <li><a href="/QuemSomos" class="hover:text-teal-900 transition-colors">Quem Somos</a></li>
       <li><a href="/#Servicos" class="hover:text-teal-900 transition-colors">Serviços</a></li>
@@ -43,7 +43,7 @@ import relogioicon from "../../assets/relogioicon.svg";
     </a>
   </nav>
 
-  <div id="mobile-menu" class="md:hidden bg-[#3ABDAD] shadow-lg absolute left-0 right-0 top-[76px] overflow-hidden max-h-0 transition-all duration-300 ease-in-out">
+  <div id="mobile-menu" class="md:hidden bg-[#3ABDAD] shadow-lg absolute left-0 right-0 top-[128px] overflow-hidden max-h-0 transition-all duration-300 ease-in-out">
     <div class="px-6 py-4">
       <ul class="flex flex-col space-y-3">
       <li><a href="/#Home" class="block py-2 hover:text-teal-900 transition-colors">Início</a></li>
