fix: ajustes nas imagens

--- a/src/components/Footer/index.astro
+++ b/src/components/Footer/index.astro
@@ -7,7 +7,7 @@ import Icontelefone from "../../assets/socialbuttons/telefone.svg";
 import Iconemail from "../../assets/socialbuttons/email.svg";
 import Iconrocket from "../../assets/logo-rocket.svg";
 import Frase2 from "../../assets/frase2.svg";
-import salutelogo from "../../assets/logoSallute.png";
+import logoAtual from "../../assets/logoAtual.svg";
 ---
 
 <style>
@@ -20,18 +20,18 @@ import salutelogo from "../../assets/logoSallute.png";
       <div class="flex flex-col md:w-1/3">
         <div class="text-center md:text-left mb-4 md:mb-1">
           <Image
-            src={salutelogo}
+            src={logoAtual}
             alt="Logo Sallute"
             class="mx-auto md:mx-0"
-            width={250}
-            height={125}
+            width={200}
+            height={100}
           />
           <Image
             src={Frase2}
             alt="Logo Sallute"
             class="mx-auto md:mx-0"
-            width={300}
-            height={80}
+            width={250}
+            height={67}
           />
 
           <p class="mt-2 text-base">
