--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -1,23 +1,23 @@
 ---
 import { Image } from "astro:assets";
-import salutelogo from "../../assets/logoSallute.png";
+import logoAtual from "../../assets/logoAtual.svg";
 import relogioicon from "../../assets/relogioicon.svg";
 ---
 
 <header class="bg-[#3ABDAD] text-white py-1 sticky top-0 z-50" id="main-header">
   <nav class="flex items-center justify-between max-w-7xl mx-auto">
-    <div class="flex-shrink-0 mr-4 md:mr-6 lg:mr-8">
+    <div class="flex-shrink-0 mr-4 md:mr-6 lg:mr-8 ml-2 md:ml-0">
       <a href="/">
         <Image
-          src={salutelogo}
+          src={logoAtual}
           alt="Sallute Logo"
-          width={250}
-          height={125}
-          class="object-contain"/>
+          width={200}
+          height={100}
+          class="object-contain w-44 sm:w-48 md:w-52 lg:w-56"/>
         </a>
     </div>
 
-    <button id="menu-toggle" class="md:hidden flex flex-col justify-center items-center w-10 h-10 space-y-1.5" aria-label="Menu" aria-expanded="false">
+    <button id="menu-toggle" class="md:hidden flex flex-col justify-center items-center w-10 h-10 space-y-1.5 mr-4" aria-label="Menu" aria-expanded="false">
       <span class="w-6 h-0.5 bg-white transition-all duration-200"></span>
       <span class="w-6 h-0.5 bg-white transition-all duration-200"></span>
       <span class="w-6 h-0.5 bg-white transition-all duration-200"></span>
@@ -43,7 +43,7 @@ import relogioicon from "../../assets/relogioicon.svg";
     </a>
   </nav>
 
-  <div id="mobile-menu" class="md:hidden bg-[#3ABDAD] shadow-lg absolute left-0 right-0 top-[128px] overflow-hidden max-h-0 transition-all duration-300 ease-in-out">
+  <div id="mobile-menu" class="md:hidden bg-[#3ABDAD] shadow-lg absolute left-0 right-0 top-full overflow-hidden max-h-0 transition-all duration-300 ease-in-out z-40">
     <div class="px-6 py-4">
       <ul class="flex flex-col space-y-3">
       <li><a href="/#Home" class="block py-2 hover:text-teal-900 transition-colors">Início</a></li>
