fix: Correções direcionamentos das páginas

--- a/src/components/Header/index.astro
+++ b/src/components/Header/index.astro
@@ -24,7 +24,7 @@ import relogioicon from "../../assets/relogioicon.svg";
     </button>
 
     <ul class="hidden md:flex space-x-4 md:space-x-6 lg:space-x-8 font-medium">
-      <li><a href="/#Home" class="hover:text-teal-900 transition-colors">Início</a></li>
+      <li><a href="/" class="hover:text-teal-900 transition-colors">Início</a></li>
       <li><a href="/QuemSomos" class="hover:text-teal-900 transition-colors">Quem Somos</a></li>
       <li><a href="/#Servicos" class="hover:text-teal-900 transition-colors">Serviços</a></li>
       <li><a href="/CorpoClinico" class="hover:text-teal-900 transition-colors">Corpo Clínico</a></li>
@@ -46,7 +46,7 @@ import relogioicon from "../../assets/relogioicon.svg";
   <div id="mobile-menu" class="md:hidden bg-[#3ABDAD] shadow-lg absolute left-0 right-0 top-full overflow-hidden max-h-0 transition-all duration-300 ease-in-out z-40">
     <div class="px-6 py-4">
       <ul class="flex flex-col space-y-3">
-      <li><a href="/#Home" class="block py-2 hover:text-teal-900 transition-colors">Início</a></li>
+      <li><a href="/" class="block py-2 hover:text-teal-900 transition-colors">Início</a></li>
       <li><a href="/QuemSomos" class="block py-2 hover:text-teal-900 transition-colors">Quem Somos</a></li>
       <li><a href="/#Servicos" class="block py-2 hover:text-teal-900 transition-colors">Serviços</a></li>
       <li><a href="/CorpoClinico" class="block py-2 hover:text-teal-900 transition-colors">Corpo Clínico</a></li>
