--- a/src/components/Section3/index.astro
+++ b/src/components/Section3/index.astro
@@ -56,7 +56,7 @@ const doctors = [
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.6/keen-slider.min.css" />
 
-<section id="corpo-clinico" class="w-full py-20 bg-[#F4F7FF]">
+<section id="corpo-clinico" class="scroll-mt-20 md:scroll-mt-28 w-full py-20 bg-[#F4F7FF]">
   <div class="container mx-auto px-4 max-w-5xl">
     <div class="flex justify-center items-center">
       <DescriptionSection 
