--- a/src/components/Servicos/index.astro
+++ b/src/components/Servicos/index.astro
@@ -92,7 +92,7 @@ const laser = [
 
     <div class="flex flex-col xl:flex-row xl:items-start gap-6 bg-white p-4 sm:p-6">
       <div class="flex-1 min-w-0">
-        <h2 id="fisioterapia" class="scroll-mt-30 text-xl sm:text-2xl md:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-4 mb-3 text-left">
+        <h2 id="fisioterapia" class="scroll-mt-30 md:scroll-mt-38 text-xl sm:text-2xl md:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-4 mb-3 text-left">
           Fisioterapia
         </h2>
         <p class="text-justify text-gray-700 leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl mb-3">
@@ -125,7 +125,7 @@ const laser = [
 
     <div class="flex flex-col xl:flex-row xl:items-start gap-6 bg-white p-4 sm:p-6">
       <div class="flex-1 min-w-0">
-        <h2 id="depilacao" class="scroll-mt-30 md:scroll-mt-32 text-xl sm:text-2xl md:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-4 mb-3 text-left">
+        <h2 id="depilacao" class="scroll-mt-30 md:scroll-mt-38 text-xl sm:text-2xl md:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-4 mb-3 text-left">
           Depilação a Laser
         </h2>
         <p class="text-justify text-gray-700 leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl mb-3">
@@ -175,7 +175,7 @@ const laser = [
   <div class="flex flex-col xl:flex-row xl:items-start gap-6 bg-white p-4 sm:p-6">
     <div class="flex-1 min-w-0">
       
-      <h2 id="exames" class="scroll-mt-30 md:scroll-mt-32 text-xl sm:text-2xl md:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-4 mb-3 text-left">
+      <h2 id="exames" class="scroll-mt-30 md:scroll-mt-38 text-xl sm:text-2xl md:text-3xl lg:text-5xl font-semibold text-[#031E2D] mt-4 mb-3 text-left">
         EXAMES EM GERAL
       </h2>
       <ul class="list-disc pl-4 space-y-1 text-gray-700 text-justify leading-relaxed text-sm sm:text-base md:text-lg lg:text-2xl mb-3">
